package(default_visibility = ["@mujoco//test:__subpackages__"])

cc_library(
    name = "fixture",
    testonly = True,
    srcs = ["fixture.cc"],
    hdrs = ["fixture.h"],
    copts = [
        "-Wno-sign-compare",
    ],
    deps = [
        "//:mujoco",
        "//plugin/actuator:register",
        "//plugin/elasticity:register",
        "//plugin/sdf:register",
        "//plugin/sensor:touch_grid",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/synchronization",
        "@googletest//:gtest",
        "@spdlog",
    ],
)

cc_test(
    name = "fixture_test",
    size = "small",
    srcs = ["fixture_test.cc"],
    deps = [
        ":fixture",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "header_test",
    size = "small",
    srcs = ["header_test.cc"],
    deps = [
        ":fixture",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "pipeline_test",
    size = "small",
    srcs = ["pipeline_test.cc"],
    data = [
        "//:test_data_stripped",
    ],
    deps = [
        ":fixture",
        "@googletest//:gtest_main",
    ],
)
